# virtually-any-alternative-to-virtual

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: concepts.h  device_manager.h  device_manager_base.h  devices.h  type_traits.h
